Update ProductCardPanel.java